# groundwork

./: .gitignore  AGENTS.md  AGENT_HANDBOOK.md  CLAUDE.md  Cargo.toml  PITCH.md  README.md  plan.md
.cargo/: config.toml
.githooks/: pre-commit  pre-push
agents/: dev.md  manager.md  player.md  screenshots.md
artifacts/: tree-generation-design.md
backlog/: current-simulation.md  current-visual-style.md  current.md
build_notes/: 2026-03-11T14:00:00_seed_growth_system.md  2026-03-11T16:30:00_placement_validation.md  2026-03-11T17:00:00_batch_placement.md  2026-03-11T17:00:00_cli09_default_view_z15.md  2026-03-11T17:00:00_growth_visibility_diagnostics.md  2026-03-11T17:00:00_quick_win_display_tweaks.md  2026-03-11T17:00:00_seed_growth_indicator.md  2026-03-11T17:00:00_underground_play_p3_entry.md  2026-03-12T12:00:00_sprint4_emoji_fill_water_visual.md  2026-03-12T14:00:00_fill_protection_tests.md  2026-03-13T10:00:00_simulation_optimization.md  2026-03-13T12:00:00_species_diversity.md  (+74 more)
crates/groundwork-player/: Cargo.toml
crates/groundwork-player/artifacts/traces/: claude_session.json
crates/groundwork-player/src/: action.rs  analysis.rs  batch.rs  clustering.rs  evaluator.rs  lib.rs  observer.rs  oracle.rs  planner.rs  planner_llm.rs  planner_scripted.rs  regression.rs  report.rs  runner.rs  scenario.rs  session.rs  skills.rs  task_setter.rs  trace.rs
crates/groundwork-player/src/scenarios/: autonomous.rs  basic_growth.rs  camera_exploration.rs  ecosystem.rs  gameplay.rs  mod.rs  water_system.rs
crates/groundwork-player/tests/: scenarios.rs  session_play.rs
prompts/: sprint.md  (+3 more)
(+337 files in other folders)
