[workspace]
resolver = "2"
members = [
    "crates/groundwork-sim",
    "crates/groundwork-tui",
    "crates/groundwork-profiler",
]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
bevy_ecs = "0.18"

# Optimize third-party crates in dev builds.
# bevy_ecs is significantly faster with optimizations,
# while our own code stays at opt-level 0 for fast incremental rebuilds.
[profile.dev.package."*"]
opt-level = 2

# Release with debug info for profiling (flamegraph, perf)
[profile.release]
debug = true
