[package]
name = "groundwork-player"
version.workspace = true
edition.workspace = true

[features]
default = []
llm = ["reqwest"]

[dependencies]
groundwork-sim = { path = "../groundwork-sim" }
bevy_ecs = { workspace = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["blocking", "json"], optional = true }
